# chemical-calculators

./: .gitignore  README.md  app.py  helpers.py  pyproject.toml  reactions.py  requirements.txt  substance.py  testsomething.py  what_is_it.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
data/: table.py
data/tests/: error_Test.py  test_table.py
helpers/: string.py
reactions/: reactions.py
reactions/tests/: tests_reactions.py
src/: app.py  chemical_calculators.py
src/chemical_calculators/: __init__.py
src/chemical_calculators/core/: atom.py  consts.py  quantity.py  reaction.py  substance.py  table.py  typings.py  unit.py
src/chemical_calculators/data/: table.json
src/chemical_calculators/helpers/: string.py
src/chemical_calculators/ui/tkinter/modules/: reaction.py
src/core/: Exceptions.py  atom.py  composition.py  consts.py  enums.py  quantities.py  reaction.py  substance.py  table.py  units.py
src/helpers/: string.py
src/ui/: args.py
src/ui/tkinter/: config.py  main.py
src/ui/tkinter/modules/: reaction.py  substance.py
substance/: substance.py
substance/tests/: test_substance.py
temp/: test.py  tk-test.py
tests/: test_substance.py  test_table.py  test_tests.py  tests_reactions.py
tests/core/: test_composition.py  test_quantities.py  test_reactions.py  test_substance.py  test_table.py  test_units.py  tests_reactions.py
ui/: console.py  gui.py
ui/tkinter/: Functions.py  Outside_layer.py  ReactionModule.py  SubstanceModule.py  Var.py  handlers.py  main.py  start.py  test_class.py  window.py
