[tool.poetry]
name = "chemical-calculators"
version = "0.1.0"
description = "Various calculators for chemistry"
authors = ["Yakovlev Kll <yakovlev.kll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
